@@ -1,28 +1,6 @@
-//import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-
-plugins {
-    java
-    `java-library`
-    //    id("com.github.johnrengelman.shadow") version "5.2.0"
-}
-
-repositories {
-    jcenter()
-}
-
-configure<JavaPluginConvention> {
-    sourceCompatibility = JavaVersion.VERSION_15
-    targetCompatibility = JavaVersion.VERSION_15
-}
-
-java {
-    modularity.inferModulePath.set(true)
-}
-
 allprojects {
     group = "cos"
     version = "1.0-SNAPSHOT"
-
     repositories {
         mavenCentral()
         maven(url = "https://kotlin.bintray.com/kotlinx")
@@ -31,11 +9,21 @@ allprojects {
 }
 
 subprojects {
+    apply(plugin = "org.gradle.java")
+    apply(plugin = "org.gradle.java-library")
+
+    configure<JavaPluginConvention> {
+        sourceCompatibility = JavaVersion.VERSION_15
+        targetCompatibility = JavaVersion.VERSION_15
+    }
 
     repositories {
-        mavenCentral()
-        jcenter()
         maven(url = "https://dl.bintray.com/almazko/micro")
+    }
+
+    tasks.withType<Test> {
+        useJUnitPlatform()
+        jvmArgs = listOf("--enable-preview")
     }
 
     tasks.withType<JavaCompile> {
